--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -4,12 +4,15 @@
   bottom: 80px;
   left: 0;
   right: 0;
+  height: auto;
   background: rgb(255, 255, 255);
   z-index: 990;
+  overflow-x: hidden;
   transition: all 300ms ease-in-out;
 }
 .show-overlay.show-card-visible {
   transform: translateX(0);
+  overflow-x: hidden;
 }
 
 .open-contacts-header {
