--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -7,12 +7,11 @@
   height: auto;
   background: rgb(255, 255, 255);
   z-index: 990;
-  overflow-x: hidden;
+  overflow: hidden;
   transition: all 300ms ease-in-out;
 }
 .show-overlay.show-card-visible {
-  transform: translateX(0);
-  overflow-x: hidden;
+  transform: translateX(0%);
 }
 
 .open-contacts-header {
