--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -30,6 +30,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   margin-top: 80px;
   padding: 46px 16px 0 16px;
   z-index: 100;
+  transition: all 300ms ease-in-out;
 }
 
 .content-container h1 {
@@ -392,9 +393,9 @@ li:hover .hidden-Edit_menu {
   }
   .content-container {
     position: static;
-    margin: 279px 90px 0 calc(232px + 96px);
+    margin: 200px 90px 0 calc(232px + 96px);
     overflow-x: hidden;
-    max-height: calc(100vh - 400px);
+    max-height: calc(100vh - 286px);
     display: flex;
     gap: 32px;
     max-width: 1920px;
@@ -412,7 +413,7 @@ li:hover .hidden-Edit_menu {
   }
   .content-container h1 {
     position: absolute;
-    top: 206px;
+    top: 125px;
     font-size: 64px;
     line-height: 73.2px;
   }
