--- a/css/footer.css
+++ b/css/footer.css
@@ -1,182 +1,170 @@
 .footer {
-    background-color: var(--mockup-color);
-    position: absolute;
-    width: 232px;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    z-index: 900;
-    
+  background-color: var(--mockup-color);
+  position: absolute;
+  width: 232px;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  z-index: 900;
+  transition: all 300ms ease-in-out;
 }
 
 .desktop-logo {
-    height: 122px;
-    padding: 64px 66px 114px 66px;
-    margin-bottom: 114px;
+  height: 122px;
+  padding: 64px 66px 114px 66px;
+  margin-bottom: 114px;
+  transition: all 300ms ease-in-out;
 }
 
-
 .menu-wrapper {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .menu-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    width: 100%;
-    
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  transition: all 300ms ease-in-out;
 }
 
 .footer-icon-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 46px;
-    padding-left: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 46px;
+  padding-left: 50px;
+  transition: all 300ms ease-in-out;
 }
 
-.footer-icon-box:hover {    
-    background-color: var(--focus-color-btn);
+.footer-icon-box:hover {
+  background-color: var(--focus-color-btn);
 }
-.footer-icon-box:active {    
-    background-color: var(--mockup-highlight);
+.footer-icon-box:active {
+  background-color: var(--mockup-highlight);
 }
 
 .footer-icon {
-    height: 30px;
-    width: 30px;
-    color: #a8a8a8;
+  height: 30px;
+  width: 30px;
+  color: #a8a8a8;
 }
 
 .footer-link {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    text-decoration: none;
-    color: #a8a8a8;
-    font-size: 18px;
-    font-weight: 400;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  text-decoration: none;
+  color: #a8a8a8;
+  font-size: 18px;
+  font-weight: 400;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
 }
 
 .footer-link:hover {
-    color: var(--white-color);
+  color: var(--white-color);
 }
 
 .desktop-data-box {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    padding: 0 52px 64px 52px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 0 52px 64px 52px;
 }
 
 .desktop-data-link {
-    text-decoration: none;
-    color: #a8a8a8;
-    padding: 8px;
-    gap: 8px;
-    transition: transform 0.5s ease;
-    cursor: pointer;
+  text-decoration: none;
+  color: #a8a8a8;
+  padding: 8px;
+  gap: 8px;
+  transition: transform 0.5s ease;
+  cursor: pointer;
 }
 
 .desktop-data-link:hover {
-    color: var(--mockup-highlight);
-    cursor: pointer;
-    transform: scaleX(1.2);
-    font-size: 1rem;
+  color: var(--mockup-highlight);
+  cursor: pointer;
+  transform: scaleX(1.2);
+  font-size: 1rem;
 }
 
-@media (max-width: 760px) {
-
-    .footer {
-        height: 80px;
-        width: auto;
-        position: fixed;
-        top: auto;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 100;
-    }
-
-    .desktop-logo {
-        display: none;
-    }
-
-    .menu-box {
-        height: auto;
-        margin-top: 0;      
-    }
-    .menu-content {
-        width: 100%;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: row;
-    }
-    
-    .footer-icon-box {
-        height: 80px;
-        width: auto;
-        border-radius: 16px;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .footer-icon-box:active{
-        background: var(--focus-color-btn);
-    }
-
-    .footer-icon {
-        height: 24px;
-        width: 20.31px;
-        height: 24px;
-        width: 20.31px;
-    }
-    
-    .footer-link {
-        height: 70px;
-        width: 80px;
-        font-size: 14px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 4px;
-        color: white;
-        margin-left: 0;
-    }
-    .desktop-data-box {
-        display: none;
-    }
-    .footer-wrapper {
-        display: block;
-    }
+@media (max-width: 761px) {
+  .footer {
+    height: 80px;
+    width: auto;
+    position: fixed;
+    top: auto;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+  }
+  .desktop-logo {
+    display: none;
+  }
+  .menu-content {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+  }
+  .footer-icon-box {
+    height: 80px;
+    width: auto;
+    border-radius: 16px;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer-icon-box:active {
+    background: var(--focus-color-btn);
+  }
+  .footer-icon {
+    height: 30px;
+    width: 30px;
+  }
+  .footer-link {
+    height: 70px;
+    width: 80px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4px;
+    color: white;
+    margin-left: 0;
+  }
+  .desktop-data-box {
+    display: none;
+  }
+  .footer-wrapper {
+    display: block;
+  }
 }
 
 @media (max-width: 400px) {
-    .menu-content {
-        gap: 0;
-    }
-    .footer-icon {
-        height: 16px;
-        width: 14px;
-    }
-    .footer-link {
-        font-size: 12px;
-    }
+  .menu-content {
+    gap: 0;
+  }
+  .footer-icon {
+    height: 20px;
+    width: 20px;
+  }
+  .footer-link {
+    font-size: 14px;
+  }
 }
