--- a/css/header.css
+++ b/css/header.css
@@ -30,12 +30,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .header-initials {
   font-size: 22px;
   color: var(--mockup-highlight);
   font-weight: 700;
+  cursor: pointer;
 }
 
 .logout-dropdown {
@@ -65,6 +67,7 @@
 .logout-dropdown a {
   padding-block: 8px;
   margin-left: 5px;
+  font-size: 18px;
   cursor: pointer;
   width: 140px;
   text-align: center;
